# gpt-fun

./: Untitled.ipynb  gpt-1.ipynb  gpt-2-Copy1.ipynb  gpt-2.ipynb  gpt-playground.ipynb  llama-instruct.ipynb  llama.ipynb  model_api.ipynb  pyproject.toml
.ipynb_checkpoints/: gpt-1-checkpoint.ipynb  gpt-2-Copy1-checkpoint.ipynb  llama-instruct-checkpoint.ipynb
