[tool.poetry]
name = "gpt-fun"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.10"
jupyterlab = "*"
transformers = "*"
torch = "2.2.2"
numpy = "1.26.4"
tiktoken = "*"
blobfile = "*"
accelerate = ">=0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
